# rag-context-optimizer

./: .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  Dockerfile  README.md  app.py  benchmark.py  fix_bandit_cfg.py  frontend_test.py  inference.py  openenv.yaml  pylint.txt  pyproject.toml  requirements.txt  sonar-project.properties  streamlit_app.py  validate.py  vulture_whitelist.py  vulture_whitelist.txt
.github/: dependabot.yml
.github/scripts/: ai_docs_agent.py  ai_qa_insights.py  analyze_codebase.py  generate_diagrams.py
.github/workflows/: ci.yml  ci_cd_pipeline.yml  enterprise_qa.yml  repo_automation.yml  validate.yml
.mypy_cache/3.12/: cache.0.db  cache.12.db  cache.13.db  cache.15.db  cache.2.db  cache.3.db  cache.4.db  cache.5.db  cache.6.db  cache.7.db  cache.8.db  cache.9.db
data/: corpus.jsonl  corpus_pack_enterprise_v2.jsonl
docs/: architecture.md  contributing.md  knowledge_graph.json  onboarding.md
env/: __init__.py  context_tuner.py  corpus.py  environment.py  graders.py  llm_runtime.py  llm_services.py  models.py  prompt_optimizer.py  retriever.py  tasks.py
rag_context_optimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
reports/: ai_insights.md  coverage.xml  ruff.txt
scripts/: vulture_whitelist.py
server/: app.py
server/templates/: ui.html
tests/: test_api.py  test_context_tuner_coverage.py  test_corpus.py  test_environment.py  test_environment_extra.py  test_fallback_logic.py  test_graders.py  test_inference.py  test_inference_coverage.py  test_inference_proxy.py  test_llm_features.py  test_llm_runtime.py  test_llm_services.py  test_prompt_optimizer.py  test_server_app.py  test_streamlit_app.py  test_streamlit_app_extra.py  test_validate.py
