[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-context-optimizer"
version = "1.0.0"
description = "RAG pipeline optimization environment - minimize tokens, maximize answer quality"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.136.3",
  "uvicorn[standard]==0.49.0",
  "pydantic>=2.11,<3",
  "httpx==0.28.1",
  "openai>=1.30.0",
  "python-multipart==0.0.32",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["env", "server"]
py-modules = ["app", "inference", "validate"]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0,<10",
  "pytest-asyncio",
  "httpx>=0.27.0",
  "streamlit>=1.0.0",
]
qa = [
  "vulture>=2.11",
  "radon>=6.0.1",
  "pip-audit>=2.7.3",
  "pip-licenses>=4.4.0",
  "pylint>=3.2.0",
  "bandit>=1.7.9",
  "safety>=3.2.0",
  "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
exclude = [
    "^tests/"
]

[tool.pylint.master]
ignore-paths = ["^tests/.*$"]

[tool.pylint.messages_control]
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "W0212", # protected-access
    "W0612", # unused-variable
    "C0301", # line-too-long
    "C0413", # wrong-import-position
    "C0411", # wrong-import-order
    "R0801", # duplicate-code
    "C1803", # use-implicit-booleaness-not-comparison
    "R0903", # too-few-public-methods
]
